--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -65,7 +65,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1059174722677!2d-65.20974192477854!3d-26.83658327669254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses!2sar!4v1740442583177!5m2!1ses!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-100 h-100"></iframe>
                 </article>
             </div>
-            <nav class="d-flex justify-content-center" aria-label="Page navigation example">
+           <!-- <nav class="d-flex justify-content-center" aria-labelledby="Page navigation example"></nav>
                 <ul class="pagination">
                   <li class="page-item">
                     <a class="page-link" href="#" aria-label="Previous">
@@ -81,7 +81,7 @@
                     </a>
                   </li>
                 </ul>
-              </nav>
+              </nav> -->
         </section>
     </main>
     <footer class="bg-dark">
