modifique la ventana modal

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>Completa los siguientes datos para crear cuenta</p>
+        <p>Completa los siguientes datos para crear una cuenta:</p>
         <form>
           <div class="mb-3">
             <label for="nombreapellido" class="form-label">Nombre y Apellido *</label>
@@ -185,11 +185,10 @@
             <label for="password" class="form-label">Repetir contraseña *</label>
             <input type="text" class="form-control" id="password">
           </div>
-          <button type="submit" class="btn btn-primary ms-auto">enviar</button>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary">Enviar</button>
       </div>
     </div>
   </div>
