agregue el navbar y footer en quienes somos

--- a/index.html
+++ b/index.html
@@ -158,6 +158,53 @@
           <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modalcrearcuenta">Crear tu cuenta ahora</button>
         </div>
       </section>
+      <section>
+        <div class="container grillita">
+            <div class="box">
+              <img src="img/iphone-illustration-sec.png" alt="iphone" class="img-fluid">
+            </div>
+            <div class="box">
+              <h4>Tu seguridad como prioridad</h4>
+              <p>Seguimos las mejores prácticas en cyberseguridad sin complicarte tu operación diaria</p>
+            </div>
+            <div class="box">
+              <div class="card">
+                <div class="card-body">
+                  <i class="bi bi-eye text-danger fs-3"></i>
+                  <h5 class="card-title">Biometría</h5>
+                  <p>Nuestra tecnología te permite acceder a tu cuenta usando tu huella digital o tu cara.</p>
+                </div>
+              </div>
+            </div>
+            <div class="box">
+              <div class="card">
+                <div class="card-body">
+                  <i class="bi bi-fingerprint text-primary fs-3"></i>
+                  <h5 class="card-title">Segundo Factor</h5>
+                  <p>Usamos un token invisible para todas las operaciones que hagas.</p>
+                </div>
+              </div>
+            </div>
+            <div class="box">
+              <div class="card">
+                <div class="card-body">
+                  <i class="bi bi-puzzle text-info fs-3"></i>
+                  <h5 class="card-title">Personal</h5>
+                  <p>Vas a poder ingresar desde un dispositivo a la vez en tu cuenta.</p>
+                </div>
+              </div>
+            </div>
+            <div class="box">
+              <div class="card">
+                <div class="card-body">
+                  <i class="bi bi-robot text-success fs-3"></i>
+                  <h5 class="card-title">%100 encriptado</h5>
+                  <p>Todas las transacciones son encriptadas para tu mayor seguridad.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </section>
       <!-- Modal -->
 <div class="modal fade" id="modalcrearcuenta" tabindex="-1" aria-labelledby="modalcrearcuenta" aria-hidden="true">
   <div class="modal-dialog">
