--- a/index.html
+++ b/index.html
@@ -151,58 +151,68 @@
           </div>
         </article>
       </section>
-      <section class="bg-primary-subtle">
+      <section class="bg-primary-subtle py-4">
         <div class="container text-center">
           <h2>Únete a la revolución de las criptomonedas con cryptoFin</h2>
           <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam eaque impedit repellat nulla adipisci quo sequi expedita, ipsum, minus accusantium incidunt nemo non magnam velit voluptatem similique, possimus exercitationem. Ab!</p>
           <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modalcrearcuenta">Crear tu cuenta ahora</button>
         </div>
       </section>
-      <section>
-        <div class="container grillita">
-            <div class="box">
-              <img src="img/iphone-illustration-sec.png" alt="iphone" class="img-fluid">
-            </div>
-            <div class="box">
-              <h4>Tu seguridad como prioridad</h4>
-              <p>Seguimos las mejores prácticas en cyberseguridad sin complicarte tu operación diaria</p>
-            </div>
-            <div class="box">
-              <div class="card">
-                <div class="card-body">
-                  <i class="bi bi-eye text-danger fs-3"></i>
-                  <h5 class="card-title">Biometría</h5>
-                  <p>Nuestra tecnología te permite acceder a tu cuenta usando tu huella digital o tu cara.</p>
+      <section class="container">
+        <div class="row my-4">
+          <article class="col-12 col-md-8 order-1 order-md-2 text-center text-md-start">
+            <h2>Tu seguridad como prioridad</h2>
+            <p>Seguimos las mejores prácticas en cyberseguridad sin complicarte tu operación diaria</p>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+              <div class="col">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-center d-md-block">
+                      <i class="bi bi-eye text-danger fs-1 me-2"></i>
+                      <h5 class="card-title mb-0 mb-md-2 align-content-center">Biometría</h5>
+                    </div>
+                    <p class="card-text">Nuestra tecnología  te permite acceder a tu cuenta usando tu huella digital o tu cara.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-center d-md-block">
+                      <i class="bi bi-fingerprint text-primary fs-1 me-2"></i>
+                      <h5 class="card-title mb-0 mb-md-2 align-content-center">Segundo Factor</h5>
+                    </div>
+                    <p class="card-text">Usamos un Token invisble para todas las operaciones que hagas.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-center d-md-block">
+                      <i class="bi bi-puzzle text-info fs-1 me-2"></i>
+                      <h5 class="card-title mb-0 mb-md-2 align-content-center">Personal</h5>
+                    </div>
+                    <p class="card-text">Vas a poder ingresar desde un dispositivo a la vez en tu cuenta.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-center d-md-block">
+                      <i class="bi bi-robot text-success fs-1 me-2"></i>
+                      <h5 class="card-title mb-0 mb-md-2 align-content-center">100% encriptado</h5>
+                    </div>
+                    <p class="card-text">Todas las transacciones son encriptadas para tu mayor seguridad.</p>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="box">
-              <div class="card">
-                <div class="card-body">
-                  <i class="bi bi-fingerprint text-primary fs-3"></i>
-                  <h5 class="card-title">Segundo Factor</h5>
-                  <p>Usamos un token invisible para todas las operaciones que hagas.</p>
-                </div>
-              </div>
-            </div>
-            <div class="box">
-              <div class="card">
-                <div class="card-body">
-                  <i class="bi bi-puzzle text-info fs-3"></i>
-                  <h5 class="card-title">Personal</h5>
-                  <p>Vas a poder ingresar desde un dispositivo a la vez en tu cuenta.</p>
-                </div>
-              </div>
-            </div>
-            <div class="box">
-              <div class="card">
-                <div class="card-body">
-                  <i class="bi bi-robot text-success fs-3"></i>
-                  <h5 class="card-title">%100 encriptado</h5>
-                  <p>Todas las transacciones son encriptadas para tu mayor seguridad.</p>
-                </div>
-              </div>
-            </div>
+          </article>
+          <article class="col-12 col-md-4 text-center order-2 order-md-1">
+            <img src="./img/iphone-illustration-sec.png" alt="iphone" class="w-100 img-fluid">
+          </article>
         </div>
       </section>
       <!-- Modal -->
@@ -270,7 +280,7 @@
                 </ul>
             </article>
             <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="./pages/error404.html"><img src="./img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
-            <article class="col-12 col-md-6 col-lg-3">
+            <article class="col-12 col-md-6 col-lg-3 text-center">
               <h6 class="text-secondary">Unite</h6>
                 <a href="./pages/error404.html"><img src="./img/badge-apple-store.svg" class="mb-3" alt="Apple"></a>
                 <a href="./pages/error404.html"><img src="./img/google-play-badge-bb.svg" alt="Apple"></a>
