agregue un section en quienesSomos

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -17,20 +17,20 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/quienessomos.html">¿Quienes Somos?</a>
+                    <a class="nav-link" href="quienessomos.html">¿Quienes Somos?</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/preguntasFrecuentes.html">Preguntas Frecuentes</a>
+                    <a class="nav-link" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/error404.html">Robo o extravio</a>
+                    <a class="nav-link" href="error404.html">Robo o extravio</a>
                   </li><li class="nav-item">
-                    <a class="nav-link" href="./pages/seguridad.html">Seguridad</a>
+                    <a class="nav-link" href="error404.html">Seguridad</a>
                   </li><li class="nav-item">
-                    <a class="nav-link" href="./pages/contactos.html">Contactos</a>
+                    <a class="nav-link" href="contactos.html">Contactos</a>
                   </li>
                 </ul>
               </div>
@@ -71,7 +71,7 @@
                     </ul>
                 </article>
                 <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="./pages/error404.html"><img src="../img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
-                <article class="col-12 col-md-6 col-lg-3">
+                <article class="col-12 col-md-6 col-lg-3 text-center">
                   <h6 class="text-secondary">Unite</h6>
                     <a href="./pages/error404.html"><img src="../img/badge-apple-store.svg" class="mb-3" alt="Apple"></a>
                     <a href="./pages/error404.html"><img src="../img/google-play-badge-bb.svg" alt="Apple"></a>
