--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -17,20 +17,20 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./pages/quienessomos.html">¿Quienes Somos?</a>
+                    <a class="nav-link active" aria-current="page" href="quienessomos.html">¿Quienes Somos?</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/preguntasFrecuentes.html">Preguntas Frecuentes</a>
+                    <a class="nav-link" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/error404.html">Robo o extravio</a>
+                    <a class="nav-link" href="error404.html">Robo o extravio</a>
                   </li><li class="nav-item">
-                    <a class="nav-link" href="./pages/seguridad.html">Seguridad</a>
+                    <a class="nav-link" href="error404.html">Seguridad</a>
                   </li><li class="nav-item">
-                    <a class="nav-link" href="./pages/contactos.html">Contactos</a>
+                    <a class="nav-link" href="contactos.html">Contactos</a>
                   </li>
                 </ul>
               </div>
@@ -42,11 +42,16 @@
             <h1 class="text-center marca">Quines Somos</h1>
         </section>
         <section class="container my-4">
-            <h2>Venimos a desafiar al statu quo</h2>
+            <h2 class="text-center">Venimos a desafiar al statu quo</h2>
             <p>
                 En CryptoFin, nos proponemos transformar el panorama financiero global, desafiando las normas establecidas y empoderando a nuestros clientes con herramientas innovadoras y accesibles. Creemos firmemente que las criptomonedas representan el futuro del dinero y nos dedicamos a facilitar su adopción masiva. Nuestra misión es democratizar el acceso a los activos digitales, eliminando barreras y ofreciendo soluciones seguras y transparentes. En un mundo donde el cambio es la única constante, CryptoFin se erige como un pionero, brindando a nuestros usuarios la oportunidad de ser parte de la revolución financiera que está redefiniendo el comercio, la inversión y el intercambio de valor.
             </p>
             <img src="../img/quienes-somos/us1.jpg" alt="reunion en equipo" class="img-fluid">
+        </section>
+        <section class="container my-4">
+          <h2 class="text-center">El equipo</h2>
+          <p>El éxito de CriptoFin se basa en la experiencia y en la dedicación de un equipo diverso y apasionado. Compuesto por expertos en tecnología blockchain, finanzas, seguridad cibernética y marketing, nuestro equipo combina conocimientos profundos con una visión innovadora para impulsar la evolución de las criptomonedas. Liderados por profesionales con trayectorias distinguidas en la industria tecnológica y financiera, trabajamos en sinergia para crear una plataforma que prioriza la experiencia del usuario y la seguridad. Cada miembro de CriptoFin comparte un compromiso inquebrantable con la excelencia, la integridad y la creacion de valor sostenible para nuestros clientes y la comunidad global. Juntos, estamos construyendo el futuro de las finanzas digitales.</p>
+          <img src="../img/quienes-somos/us3.jpg" alt="reunion en equipo" class="img-fluid">
         </section>
     </main>
     <footer class="bg-dark">
@@ -79,7 +84,7 @@
                     </ul>
                 </article>
                 <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="./pages/error404.html"><img src="../img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
-                <article class="col-12 col-md-6 col-lg-3">
+                <article class="col-12 col-md-6 col-lg-3 text-center">
                   <h6 class="text-secondary">Unite</h6>
                     <a href="./pages/error404.html"><img src="../img/badge-apple-store.svg" class="mb-3" alt="Apple"></a>
                     <a href="./pages/error404.html"><img src="../img/google-play-badge-bb.svg" alt="Apple"></a>
