--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="./pages/error404.html">Robo o extravio</a>
               </li><li class="nav-item">
-                <a class="nav-link" href="./pages/seguridad.html">Seguridad</a>
+                <a class="nav-link" href="./pages/error404.html">Seguridad</a>
               </li><li class="nav-item">
                 <a class="nav-link" href="./pages/contactos.html">Contactos</a>
               </li>
