--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -28,7 +28,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="error404.html">Robo o extravio</a>
                   </li><li class="nav-item">
-                    <a class="nav-link" href="seguridad.html">Seguridad</a>
+                    <a class="nav-link" href="error404.html">Seguridad</a>
                   </li><li class="nav-item">
                     <a class="nav-link" href="contactos.html">Contactos</a>
                   </li>
@@ -118,7 +118,7 @@
                     </ul>
                 </article>
                 <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="./pages/error404.html"><img src="../img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
-                <article class="col-12 col-md-6 col-lg-3">
+                <article class="col-12 col-md-6 col-lg-3 text-center">
                   <h6 class="text-secondary">Unite</h6>
                     <a href="./pages/error404.html"><img src="../img/badge-apple-store.svg" class="mb-3" alt="Apple"></a>
                     <a href="./pages/error404.html"><img src="../img/google-play-badge-bb.svg" alt="Apple"></a>
