modifique el titulo de la rama quienesSomos

--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -39,7 +39,7 @@
     </header>
     <main class="my-4">
         <section class="bg-primary-subtle py-4">
-            <h1 class="text-center marca">Quines Somos</h1>
+            <h1 class="marca text-center">Quienes Somos</h1>
         </section>
         <section class="container my-4">
             <h2 class="text-center">Venimos a desafiar al statu quo</h2>
