modifique el navbar y el footer

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <h6 class="text-secondary">Navegación</h6>
                 <ul class="list-unstyled">
                     <li><a href="./pages/quienesSomos.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">¿Quienes Somos?</a></li>
-                    <li><a href="#" class="link-secondary link-underline-opacity-0">Seguridad</a></li>
+                    <li><a href="./pages/error404.html" class="link-secondary link-underline-opacity-0">Seguridad</a></li>
                     <li><a href="./pages/preguntasFrecuentes.html" class="link-secondary link-underline-opacity-0">preguntasFrecuentes</a></li>
                     <li><a href="./pages/contactos.html" class="link-secondary link-underline-opacity-0">Contacto</a></li>
                     <li><a href="./pages/error404.html" class="link-secondary link-underline-opacity-0">Ayuda</a></li>
@@ -275,8 +275,6 @@
                     <li><a href="./pages/error404.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">Email: cryptoFin@gmail.com</a></li>
                     <li><a href="./pages/error404.html" class="link-secondary link-underline-opacity-0">Telefono: +1 8256036625</a></li>
                     <li><a href="https://maps.app.goo.gl/gf4MW3TFYr9LGLHT8" target="_blank" class="link-secondary link-underline-opacity-0">Dirección: Gral. José María Paz 576, San Miguel de Tucumán, Tucumán</a></li>
-                    <li><a href="#" class="link-secondary link-underline-opacity-0"></a></li>
-                    <li><a href="#" class="link-secondary link-underline-opacity-0">Contacto</a></li>
                 </ul>
             </article>
             <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="./pages/error404.html"><img src="./img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
