--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-              <a class="navbar-brand marca" href="index.html">CriptoFyn</a>
+              <a class="navbar-brand marca" href="../index.html">CriptoFyn</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -66,28 +66,26 @@
                 <article class="col-12 col-md-6 col-lg-3 text-center text-md-start">
                     <h6 class="text-secondary">Navegación</h6>
                     <ul class="list-unstyled">
-                        <li><a href="./pages/quienesSomos.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">¿Quienes Somos?</a></li>
-                        <li><a href="#" class="link-secondary link-underline-opacity-0">Seguridad</a></li>
-                        <li><a href="./pages/preguntasFrecuentes.html" class="link-secondary link-underline-opacity-0">preguntasFrecuentes</a></li>
-                        <li><a href="./pages/contactos.html" class="link-secondary link-underline-opacity-0">Contacto</a></li>
-                        <li><a href="./pages/error404.html" class="link-secondary link-underline-opacity-0">Ayuda</a></li>
+                        <li><a href="quienesSomos.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">¿Quienes Somos?</a></li>
+                        <li><a href="error404.html" class="link-secondary link-underline-opacity-0">Seguridad</a></li>
+                        <li><a href="preguntasFrecuentes.html" class="link-secondary link-underline-opacity-0">preguntasFrecuentes</a></li>
+                        <li><a href="contactos.html" class="link-secondary link-underline-opacity-0">Contacto</a></li>
+                        <li><a href="error404.html" class="link-secondary link-underline-opacity-0">Ayuda</a></li>
                     </ul>
                 </article>
                 <article class="col-12 col-md-6 col-lg-3 text-center text-md-start">
                     <h6 class="text-secondary">Contacto</h6>
                     <ul class="list-unstyled">
-                        <li><a href="./pages/error404.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">Email: cryptoFin@gmail.com</a></li>
-                        <li><a href="./pages/error404.html" class="link-secondary link-underline-opacity-0">Telefono: +1 8256036625</a></li>
+                        <li><a href="error404.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">Email: cryptoFin@gmail.com</a></li>
+                        <li><a href="error404.html" class="link-secondary link-underline-opacity-0">Telefono: +1 8256036625</a></li>
                         <li><a href="https://maps.app.goo.gl/gf4MW3TFYr9LGLHT8" target="_blank" class="link-secondary link-underline-opacity-0">Dirección: Gral. José María Paz 576, San Miguel de Tucumán, Tucumán</a></li>
-                        <li><a href="#" class="link-secondary link-underline-opacity-0"></a></li>
-                        <li><a href="#" class="link-secondary link-underline-opacity-0">Contacto</a></li>
                     </ul>
                 </article>
-                <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="./pages/error404.html"><img src="../img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
+                <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="error404.html"><img src="../img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
                 <article class="col-12 col-md-6 col-lg-3 text-center">
                   <h6 class="text-secondary">Unite</h6>
-                    <a href="./pages/error404.html"><img src="../img/badge-apple-store.svg" class="mb-3" alt="Apple"></a>
-                    <a href="./pages/error404.html"><img src="../img/google-play-badge-bb.svg" alt="Apple"></a>
+                    <a href="error404.html"><img src="../img/badge-apple-store.svg" class="mb-3" alt="Apple"></a>
+                    <a href="error404.html"><img src="../img/google-play-badge-bb.svg" alt="Apple"></a>
                 </article>
             </div>
         </div>
