agregue un section en la rama preguntas frecuentes

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-              <a class="navbar-brand marca" href="../index.html">CriptoFyn</a>
+              <a class="navbar-brand marca" href="../index.html">CryptoFin</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -39,7 +39,7 @@
     </header>
     <main>
         <section class="bg-primary-subtle py-4">
-            <h1 class="text-center marca">Contactos</h1>
+            <h1 class="marca text-center">Contactos</h1>
         </section>
         <section class="container my-3">
             <div class="row">
