--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand marca" href="../index.html">CriptoFyn</a>
+          <a class="navbar-brand marca" href="../index.html">CryptoFin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,8 +38,76 @@
         </div>
       </nav>
     </header>
-    <main></main>
-    <footer>
+    <main>
+      <section class="bg-primary-subtle py-4">
+        <h1 class="marca text-center">Preguntas Frecuentes</h1>
+      </section>
+      <section class="container my-4">
+        <div class="accordion" id="accordionE">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                ¿Qué es CryptoFin?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+              <div class="accordion-body">
+                <a href="../index.html">CryptoFin</a> es una fintech dedicada a ofrecer una plataforma segura y fácil de usar para la compra, venta y gestión de criptomonedas.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+               ¿Como protegen mis fondos?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                Utilizamos medidas de seguridad de nivel bancario, incluyendo autenticación de dos factores y encriptación avanzada, para proteger tus activos.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                ¿Qué criptomonedas puedo comprar?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                Ofrecemos una amplia variedad de criptomonedas, incluyendo Bitcoin, Ethereum, Litecoin, y muchas más.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                ¿Cuáles son las tarifas de transacción?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+              <div class="accordion-body">
+               Nuestras tarifas son competitivas y transparentes. Consulta nuestra página de tarifas para más detalles.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                ¿Comó puedo contactar con el soporte?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
+              <div class="accordion-body">
+               Nuestro equipo de soporte está disponible 24/7 a tráves de chat en vivo, correo electrónico y teléfono.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="bg-dark">
         <div class="container">
         <div class="d-flex gap-3">
             <h4 class="marca align-self-center mb-0">CryptoFin</h4>
@@ -52,7 +120,7 @@
                 <h6 class="text-secondary">Navegación</h6>
                 <ul class="list-unstyled">
                     <li><a href="quienesSomos.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">¿Quienes Somos?</a></li>
-                    <li><a href="#" class="link-secondary link-underline-opacity-0">Seguridad</a></li>
+                    <li><a href="error404.html" class="link-secondary link-underline-opacity-0">Seguridad</a></li>
                     <li><a href="preguntasFrecuentes.html" class="link-secondary link-underline-opacity-0">preguntasFrecuentes</a></li>
                     <li><a href="contactos.html" class="link-secondary link-underline-opacity-0">Contacto</a></li>
                     <li><a href="error404.html" class="link-secondary link-underline-opacity-0">Ayuda</a></li>
@@ -64,8 +132,6 @@
                     <li><a href="error404.html" class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover">Email: cryptoFin@gmail.com</a></li>
                     <li><a href="error404.html" class="link-secondary link-underline-opacity-0">Telefono: +1 8256036625</a></li>
                     <li><a href="https://maps.app.goo.gl/gf4MW3TFYr9LGLHT8" target="_blank" class="link-secondary link-underline-opacity-0">Dirección: Gral. José María Paz 576, San Miguel de Tucumán, Tucumán</a></li>
-                    <li><a href="#" class="link-secondary link-underline-opacity-0"></a></li>
-                    <li><a href="#" class="link-secondary link-underline-opacity-0">Contacto</a></li>
                 </ul>
             </article>
             <article class="col-12 col-md-6 col-lg-3 text-center justify-content-center justify-content-md-start"><a href="error404.html"><img src="../img/usuariosfinancieros.png" class="w-100 mb-3" alt="logo usuarios financieros"></a></article>
