--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-              <a class="navbar-brand marca" href="../index.html">CriptoFyn</a>
+              <a class="navbar-brand marca" href="../index.html">CryptoFin</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -50,7 +50,7 @@
         </section>
         <section class="container my-4">
           <h2 class="text-center">El equipo</h2>
-          <p>El éxito de CriptoFin se basa en la experiencia y en la dedicación de un equipo diverso y apasionado. Compuesto por expertos en tecnología blockchain, finanzas, seguridad cibernética y marketing, nuestro equipo combina conocimientos profundos con una visión innovadora para impulsar la evolución de las criptomonedas. Liderados por profesionales con trayectorias distinguidas en la industria tecnológica y financiera, trabajamos en sinergia para crear una plataforma que prioriza la experiencia del usuario y la seguridad. Cada miembro de CriptoFin comparte un compromiso inquebrantable con la excelencia, la integridad y la creacion de valor sostenible para nuestros clientes y la comunidad global. Juntos, estamos construyendo el futuro de las finanzas digitales.</p>
+          <p>El éxito de CryptoFin se basa en la experiencia y en la dedicación de un equipo diverso y apasionado. Compuesto por expertos en tecnología blockchain, finanzas, seguridad cibernética y marketing, nuestro equipo combina conocimientos profundos con una visión innovadora para impulsar la evolución de las criptomonedas. Liderados por profesionales con trayectorias distinguidas en la industria tecnológica y financiera, trabajamos en sinergia para crear una plataforma que prioriza la experiencia del usuario y la seguridad. Cada miembro de CryptoFin comparte un compromiso inquebrantable con la excelencia, la integridad y la creacion de valor sostenible para nuestros clientes y la comunidad global. Juntos, estamos construyendo el futuro de las finanzas digitales.</p>
           <img src="../img/quienes-somos/us3.jpg" alt="reunion en equipo" class="img-fluid">
         </section>
     </main>
