--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header><nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand marca" href="index.html">CriptoFyn</a>
+          <a class="navbar-brand marca" href="index.html">CryptoFin</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -250,7 +250,7 @@
     </div>
   </div>
 </div>
-      <footer>
+      <footer class="bg-dark">
         <div class="container">
         <div class="d-flex gap-3">
             <h4 class="marca align-self-center mb-0">CryptoFin</h4>
