--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -18,13 +18,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="quienessomos.html">¿Quienes Somos?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
+                <a class="nav-link active" aria-current="page" href="preguntasFrecuentes.html">Preguntas Frecuentes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="error404.html">Robo o extravio</a>
