modifique el footer

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -37,7 +37,7 @@
             </div>
           </nav>
     </header>
-    <main>
+    <main class="my-4">
         <section class="bg-primary-subtle py-4">
             <h1 class="marca text-center">Contactos</h1>
         </section>
@@ -88,7 +88,7 @@
               </nav> -->
         </section>
     </main>
-    <footer class="bg-dark">
+    <footer class="bg-dark-subtle">
             <div class="container">
             <div class="d-flex gap-3">
                 <h4 class="marca align-self-center mb-0">CryptoFin</h4>
