--- a/pages/error404.html
+++ b/pages/error404.html
@@ -41,7 +41,7 @@
         <img src="../img/404.gif" class="w-75 rounded-5" alt="logo de error de 404">
         <a href="../index.html" class="btn btn-outline-light mt-4">Volver al inicio</a>
     </main>
-    <footer class="bg-dark">
+    <footer class="bg-dark-subtle">
             <div class="container">
             <div class="d-flex gap-3">
                 <h4 class="marca align-self-center mb-0">CryptoFin</h4>
