--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </nav></header>
-    <main>
+    <main class="my-4">
       <section id="carouselCryptoFin" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselCryptoFin*5" data-bs-slide-to="0" class="active bg-light" aria-current="true" aria-label="Slide 1"></button>
@@ -250,7 +250,7 @@
     </div>
   </div>
 </div>
-      <footer class="bg-dark">
+      <footer class="bg-dark-subtle">
         <div class="container">
         <div class="d-flex gap-3">
             <h4 class="marca align-self-center mb-0">CryptoFin</h4>
