--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -54,7 +54,7 @@
           <img src="../img/quienes-somos/us3.jpg" alt="reunion en equipo" class="img-fluid">
         </section>
     </main>
-    <footer class="bg-dark">
+    <footer class="bg-dark-subtle">
             <div class="container">
             <div class="d-flex gap-3">
                 <h4 class="marca align-self-center mb-0">CryptoFin</h4>
